--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="canonical" href="#">
-    <title>Bikin Logo Pati: Jasa Desain Logo Terbaii Di Pati ⚡</title>
-    <meta name="title" content=" Bikin Logo Pati: Jasa Desain Logo Terbaii Di Pati ⚡">
+    <title>Bikin Logo: Jasa Desain Logo Terbaik dan Termurah di Indonesia⚡</title>
+    <meta name="title" content="Bikin Logo: Jasa Desain Logo Terbaik dan Termurah di Indonesia⚡">
     <meta name="description" content="Jangan Order desain Disini Kalau ga mau branding usahamu naik level dan selalu diingat customers!" />
-    <meta name="keywords" content="Jasa Logo, Jasa Desain Logo, Jasa Logo Pati, Jasa Desain Logo Pati, Jasa Desain Logo Murah, Jasa Desain Logo Profesional, Jasa Desain Logo Perusahaan, Jasa Desain Logo Olshop" />
+    <meta name="keywords" content="Jasa Logo, Jasa Desain Logo, Jasa Logo, Jasa Desain Logo, Jasa Desain Logo Murah, Jasa Desain Logo Profesional, Jasa Desain Logo Perusahaan, Jasa Desain Logo Olshop" />
     <style amp-custom>
       * {
         box-sizing: border-box;
