--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class=atas>
         <div class=atasbox>
           <div>
-            <amp-img class=imghero height=300 width=300 alt="Jasa Logo Pati" src="https://bikinlogo.pages.dev/asset/bikin-logo.jpeg"></amp-img>
+            <amp-img class=imghero height=300 width=300 alt="Jasa Desain Logo" src="https://bikinlogo.pages.dev/asset/bikin-logo.jpeg"></amp-img>
           </div>
           <div class=ataslink>
             <a href="https://wa.link/e58ngb" class=btn1>Konsultasi Gratis Sekarang</a>
